Name:                HList
Version:             0.1
Category:            Data
Synopsis:            Heterogeneous lists
Description:         Record system providing strongly typed heterogenous lists, records,
                     type-indexed products (TIP) and co-products; licensed under the MIT X License.
License:             OtherLicense
License-File:        LICENSE
Author:              2004 Oleg Kiselyov (FNMOC, Monterey), Ralf Laemmel (CWI/VU, Amsterdam), Keean Schupke (Imperial College, London)
Maintainer:          Musasabi <ekarttun@cs.helsinki.fi>

Build-Depends:       base
Build-Type:          Simple
Hs-Source-Dirs:      src
Exposed-modules:     HList
Other-modules:       Label4, CommonMain, Variant, GhcSyntax, GhcRecord, Record,
                     HZip, TIC, TIP, HTypeIndexed, HOccurs, HArray, GhcExperiments,
                     HListPrelude, TypeEqBoolGeneric, TypeEqGeneric1, TypeCastGeneric1,
                     FakePrelude

extensions:          OverlappingInstances, RankNTypes, FlexibleInstances,
                     TypeSynonymInstances, UndecidableInstances
ghc-options:         -O2
