Name:                HList
Version:             0.3.0
Category:            Data
Synopsis:            Heterogeneous lists
Description:         HList is a record system providing strongly typed heterogenous lists, records,
                     type-indexed products (TIP) and co-products; licensed under the MIT X License.
License:             MIT
License-File:        LICENSE
Author:              2004 Oleg Kiselyov (FNMOC, Monterey), Ralf Laemmel (CWI/VU, Amsterdam),
                     Keean Schupke (London)
Maintainer:          oleg@pobox.com

Data-files:          README
Cabal-version:       >= 1.4
Tested-With:         GHC==7.6.2
Build-Type:          Simple


library
  Build-Depends:       base >= 4 && < 5, template-haskell
  Exposed-modules:     Data.HList,

                       Data.HList.CommonMain,
                       Data.HList.HList,
                       Data.HList.HZip,

                       Data.HList.HListPrelude,
                       Data.HList.FakePrelude,

                       Data.HList.HArray,
                       Data.HList.HOccurs,
                       Data.HList.HTypeIndexed,
                       Data.HList.TIP,
                       Data.HList.TIC,
                       Data.HList.MakeLabels,
                       Data.HList.Record,
                       Data.HList.Variant,
                       Data.HList.TypeEqO,

                       Data.HList.Label3,
                       Data.HList.Label6

  ghc-options:         -Wall
